# pulumi-openstack

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .travis.yml  .upgrade-config.yml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Gopkg.template.toml  Gopkg.toml  Makefile  Makefile.github  README.md  go.mod  go.sum  logs.json  mise.toml  resources.go
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_openstack/: README.md  __init__.py  _inputs.py  _tables.py  bgpvpn_network_associate_v2.py  bgpvpn_port_associate_v2.py  bgpvpn_router_associate_v2.py  bgpvpn_v2.py  get_fw_group_v2.py  get_fw_policy_v2.py  get_fw_rule_v2.py  lb_flavorprofile_v2.py  lb_loadbalancer_v2.py  outputs.py  provider.py  pulumi-plugin.json  taas_tap_mirror_v2.py  tables.py  workflow_workflow_v2.py
sdk/python/pulumi_openstack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/pulumi_openstack/bgpvpn/: __init__.py  _inputs.py  network_associate_v2.py  outputs.py  port_associate_v2.py  router_associate_v2.py  v2.py
sdk/python/pulumi_openstack/blockstorage/: __init__.py  _inputs.py  get_availability_zones_v3.py  get_quotaset_v3.py  get_snapshot_v2.py  get_snapshot_v3.py  get_volume_v2.py  get_volume_v3.py  outputs.py  qos_association_v3.py  qos_v3.py  quote_set_v2.py  quote_set_v3.py  volume.py  volume_attach.py  volume_attach_v2.py  volume_type_access_v3.py  volume_type_v3.py  volume_v1.py  volume_v2.py
sdk/python/pulumi_openstack/compute/: __init__.py  _inputs.py  aggregate_v2.py  flavor.py  flavor_access.py  (+19 more)
(+1925 files in other folders)
