[project]
  name = "pulumi_openstack"
  description = "A Pulumi package for creating and managing OpenStack cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "openstack"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "4.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.io"
    Repository = "https://github.com/pulumi/pulumi-openstack"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_openstack = ["py.typed", "pulumi-plugin.json"]
